removed unecessary files

--- a/_posts/2009-11-1-dell-studio-15-white-screen-of-death-karmic-koala-workaround.html
+++ b/_posts/2009-11-1-dell-studio-15-white-screen-of-death-karmic-koala-workaround.html
@@ -1,5 +1,5 @@
 --- 
-  layout: default
+  layout: post
   title: Dell Studio 15 "White Screen of Death" Karmic Koala Workaround
   categories: [karmic, ubuntu]
 ---
