--- a/_posts/2009-4-10-watch-e-text-editor-on-linux.html
+++ b/_posts/2009-4-10-watch-e-text-editor-on-linux.html
@@ -1,5 +1,5 @@
 --- 
-  layout: default
+  layout: post
   title: Watch E Text Editor on Linux
   categories: [e, emacs, vim, gedit, textmate, programming]
 ---
