--- a/_posts/2009-5-13-haxe-an-interesting-path-to-open-source-flash-programming.html
+++ b/_posts/2009-5-13-haxe-an-interesting-path-to-open-source-flash-programming.html
@@ -1,5 +1,5 @@
 --- 
-  layout: default
+  layout: post
   title: Haxe - An Interesting Path To Open Source Flash Programming
   categories: [haxe, flash]
 ---
