--- a/_posts/2009-5-18-populate-object-instance-variables-from-hash.html
+++ b/_posts/2009-5-18-populate-object-instance-variables-from-hash.html
@@ -1,5 +1,5 @@
 --- 
-  layout: default
+  layout: post
   title: Populate Object Instance Variables From Hash
   categories: [programming, rails]
 ---
