--- a/_posts/2010-2-16-portfolio.html
+++ b/_posts/2010-2-16-portfolio.html
@@ -1,5 +1,5 @@
 --- 
-layout: default
+layout: post
 title: Portfolio
 ---
 <p>I have been dabbling in the freelance world, and have created a simple portfolio listing on this site.  <a href="/portfolios">Take a look</a> if you are interested to see some of the work that I have been doing in my &#8220;free time&#8221;.</p>
