--- a/_posts/2011-2-1-matrox-dualhead2go-triplehead2go-on-ubuntu-with-ati-amd.html
+++ b/_posts/2011-2-1-matrox-dualhead2go-triplehead2go-on-ubuntu-with-ati-amd.html
@@ -1,5 +1,5 @@
 --- 
-  layout: default
+  layout: post
   title: "Matrox DualHead2Go, TripleHead2Go on Ubuntu, with ATI/AMD"
   categories: [ubuntu, dualhead2go, triplehead2go]
 ---
