--- a/_posts/2009-4-9-welcome.html
+++ b/_posts/2009-4-9-welcome.html
@@ -1,6 +1,7 @@
 --- 
-  layout: default
+  layout: post
   title: Welcome
 ---
 <p>I mulled around for a while about the design of this site.  I eventually decided to use a variation on the iNove theme from wordpress, I think it looks nice and will complement the content nicely.
 This will be a typical technical blog about web development with some personal posts thrown in once in a while.  Many thanks to <a href="http://enkiblog.com">Enki</a> , <a href="http://slicehost.com">Slicehost</a> , <a href="http://github.com">GitHub</a> , and all the great people who make open source what it is.</p>
+
