--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,47 @@
 ---
 <h2>{{page.title}}</h2>
 <div class='portfolios'> 
+  <div class='portfolio_item'> 
+    <h3>Spanish Oaks</h3> 
+    <p class='screenshot'> 
+      <a href='http://spanishoaks.com/'> 
+        <img alt="Spanish Oaks" src="https://img.skitch.com/20111103-gpi4a68rhx96ewfe5nbticthi5.jpg" /> 
+      </a> 
+    </p> 
+    <p>I have built a custom adapter between the austin RETS system and Spanish Oaks. I built out the interactive Property Map using <a href="http://raphaeljs.com">Raphael JS</a>.</p>
+    <p>This is a joint project between myself and <a href="http://getupstream.com">Upstream Communications</a></p>
+  </div> 
 
   <div class='portfolio_item'> 
     <h3> 
-      <a href='/portfolios/7-Isdale-Chiropractic-of-Harker-Heights'>Isdale Chiropractic of Harker Heights</a> 
+      RiskKey
+    </h3> 
+    <p class='screenshot'> 
+      <a href='http://ccaps.strausscenter.org/'> 
+        <img alt="RiskKey" src="https://img.skitch.com/20110907-pmhf1s2fcjfa5h3mrn9w9s5xmi.jpg" /> 
+      </a> 
+    </p> 
+    <p>I am the 3rd developer to work on this site. It focuses on making Risk Assesment and Compliance a breeze for the banking industry. There are many, many rich features to be explored within this site. Reporting, complex email notifications, re-branding, inline editing, strict user permissions. I have so far accomplished upgrading the site to a more modern version of rails, as well as puting out fires, adding features, etc.</p>
+    <p>This is a joint project between myself and <a href="http://divinusinc.com/">Divinus Inc.</a></p>
+  </div> 
+
+
+  <div class='portfolio_item'> 
+    <h3> 
+      CCAPS Strauss Center
+    </h3> 
+    <p class='screenshot'> 
+      <a href='http://ccaps.strausscenter.org/'> 
+        <img alt="Strauss Center CCAPS" src="https://img.skitch.com/20110907-p79g1kt8thfsjj3kcftchkhaxy.jpg" /> 
+      </a> 
+    </p> 
+    <p>The site was designed by <a href="http://www.getupstream.com">Upstream Communications</a>. </p>
+    <p>I built out and modified the entire SCAD database. CCAPS, Upstream, and myself worked closely on every detail of this website. It is a gem in the academic community.<p> 
+  </div> 
+
+  <div class='portfolio_item'> 
+    <h3> 
+      Isdale Chiropractic of Harker Heights
     </h3> 
     <p class='screenshot'> 
       <a href='http://isdalechiroharkerheights.com/'> 
@@ -20,7 +57,7 @@
 
   <div class='portfolio_item'> 
     <h3> 
-      <a href='/portfolios/6-Meredith-Geller'>Meredith Geller</a> 
+      Meredith Geller
     </h3> 
     <p class='screenshot'> 
       <a href='http://www.meredithgeller.com'> 
@@ -34,7 +71,7 @@
 
   <div class='portfolio_item'> 
     <h3> 
-      <a href='/portfolios/5-Talebait'>Talebait</a> 
+      Talebait
     </h3> 
     <p class='screenshot'> 
       <a href='http://www.talebait.com'> 
@@ -48,7 +85,7 @@
 
   <div class='portfolio_item'> 
     <h3> 
-      <a href='/portfolios/4-Kirk-Riedel'>Kirk Riedel</a> 
+      Kirk Riedel
     </h3> 
     <p class='screenshot'> 
       <a href='http://kirkriedel.com'> 
@@ -62,7 +99,7 @@
 
   <div class='portfolio_item'> 
     <h3> 
-      <a href='/portfolios/3-Resurgence-Fitness'>Resurgence Fitness</a> 
+      Resurgence Fitness
     </h3> 
     <p class='screenshot'> 
       <a href='http://www.resurgencefitness.com'> 
@@ -75,7 +112,7 @@
 
   <div class='portfolio_item'> 
     <h3> 
-      <a href='/portfolios/2-Austin-Green-Water-Rain-Barrels'>Austin Green Water Rain Barrels</a> 
+      Austin Green Water Rain Barrels
     </h3> 
     <p class='screenshot'> 
       <a href='http://www.austingreenwater.com'> 
