added votersact to porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
   layout: default
   title: Portfolio
 ---
+
 <h2>{{page.title}}</h2>
 <div class='portfolios'> 
   <div class='portfolio_item'> 
@@ -26,6 +27,16 @@
     </p> 
     <p>I am the 3rd developer to work on this site. It focuses on making Risk Assesment and Compliance a breeze for the banking industry. There are many, many rich features to be explored within this site. Reporting, complex email notifications, re-branding, inline editing, strict user permissions. I have so far accomplished upgrading the site to a more modern version of rails, as well as puting out fires, adding features, etc.</p>
     <p>This is a joint project between myself and <a href="http://divinusinc.com/">Divinus Inc.</a></p>
+  </div> 
+
+  <div class='portfolio_item'> 
+    <h3>Voters Act</h3> 
+    <p class='screenshot'> 
+      <a href='https://votersact.com/'> 
+        <img alt="VotersAct" src="https://img.skitch.com/20111103-ft6eyspg9gegf3qmgrpyax5ukm.jpg" /> 
+      </a> 
+    </p> 
+    <p>Voters Act is a social donation platform. The founders are actively promoting, and growing the business. The design was done by <a href="http://shayisdale.com">Shay Isdale</a>. It is a very interesting idea and application, if you are a political junkie, I suggest you sign up and start fundraising for your favorite candidates.</p>
   </div> 
 
 
