updated portfolio, road to hell post

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,27 @@
 <h2>{{page.title}}</h2>
 <div class='portfolios'> 
   <div class='portfolio_item'> 
+    <h3>Ticketbud</h3> 
+    <p class='screenshot'> 
+      <a href='http://ticketbud.com/'> 
+        <img alt="Ticketbud" src="https://img.skitch.com/20120717-1iwxct4fq5w2hrf5rwtmnu26bj.jpg" width=498 /> 
+      </a> 
+    </p> 
+    <p><a href="http://www.ticketbud.com">Ticketbud</a> is exactly what you should be using for your next event. It's a flat fee, custom ticketing solution. I worked closely with the ticketbud team to revamp and reprocess their application. It is beautiful and solves a pain point for event organizers everywhere. I rebuilt it from the ground up and have been working on many new exciting features. The front end work was done by <a href="http://upshawinteractive.com/">Upshaw Interactive</a>.</p>
+  </div> 
+
+  <div class='portfolio_item'> 
+    <h3>Swimtopia</h3> 
+    <p class='screenshot'> 
+      <a href='http://swimtopia.com/'> 
+        <img alt="Swimtopia" src="https://img.skitch.com/20120717-gtc9g1a39s4irshk5dj4ssfxb5.jpg" width=498 /> 
+      </a> 
+    </p> 
+    <p><a href="http://www.swimtopia.com">SwimTopia</a> relieves a huge pain point for swim teams. It is an excellent application with a very talented group of people behind it. I was tasked to help build out the easy to use CMS interface for swim teams custom sites. I gained intimate knowledge of <a href="https://github.com/collectiveidea/awesome_nested_set">Awesome Nested Set</a>. I had a lot of fun, and hope to work with Swimtopia in the future, and wish them great success.</p>
+    <p></p>
+  </div> 
+
+  <div class='portfolio_item'> 
     <h3>Spanish Oaks</h3> 
     <p class='screenshot'> 
       <a href='http://spanishoaks.com/'> 
