added sarita valley to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,18 @@
     <p></p>
   </div> 
 
+  <div class='portfolio_item'>
+    <h3>Sarita Valley</h3>
+    <p class='screenshot'>
+      <a href="http://saritavalley.com">
+        <img alt="Sarita Valley" src="https://img.skitch.com/20120806-rbcx3fppkmy8c2k4hbq5istjeg.jpg" />
+      </a>
+    </p>
+    <p>
+      <a href="http://saritavalley.com">Sarita Valley</a> is a housing community in Leander, TX. <a href="http://riversideresources.com">Riverside Resources</a> designed the pleasant looking informational site. This site was built using <a href="http://middlemanapp.com">Middleman</a>, which I highly recommend over using plain html/css if you are used to building dynamic sites in a web framework like Ruby on Rails.
+    </p>
+  </div>
+
   <div class='portfolio_item'> 
     <h3>Spanish Oaks</h3> 
     <p class='screenshot'> 
